# python-fastapi

./: .gitignore  README.md  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
